blockml/test/errors/07_model_sql_always_where/e150/e150_one.view
view: e150_one
table: 1
fields:
- calculation: calc1
  sql: ${dim1}

- dimension: dim1
  sql: 555
